fix word wrap for long project names

--- a/src/components/css/list-item.css
+++ b/src/components/css/list-item.css
@@ -10,7 +10,7 @@
     text-decoration: line-through;
   }
 
-  .list-details {
+  .list-item-details {
     flex: 1;
   }
 
